Merged revisions 990-993,996-998 via svnmerge from https://fll-sw.svn.sourceforge.net/svnroot/fll-sw/branches/jpschewe
........
  r990 | jpschewe | 2009-10-03 17:44:17 -0500 (Sat, 03 Oct 2009) | 1 line
  
  Up version for next release.
........
  r991 | jpschewe | 2009-10-19 20:33:45 -0500 (Mon, 19 Oct 2009) | 2 lines
  
  Added title for MN tournament.
........
  r992 | jpschewe | 2009-10-20 06:28:29 -0500 (Tue, 20 Oct 2009) | 2 lines
  
  Removed bricks from welcome page and made logo transparent.
........
  r993 | jpschewe | 2009-10-21 19:30:17 -0500 (Wed, 21 Oct 2009) | 2 lines
  
  Added FIRST logo to welcome page.
........
  r996 | jpschewe | 2009-10-24 13:30:26 -0500 (Sat, 24 Oct 2009) | 2 lines
  
  Trying to organize a bit more, moved tomcat into tools.
........
  r997 | jpschewe | 2009-10-24 13:30:46 -0500 (Sat, 24 Oct 2009) | 2 lines
  
  Updated classpath for new tomcat location.
........
  r998 | jpschewe | 2009-10-24 13:36:58 -0500 (Sat, 24 Oct 2009) | 2 lines
  
  Adding ant, so that everyone is building from the same standard set of tools.
........